# animation-in-terminal

./: MANIFEST.in  README-PL.md  README.md  main.py  pyproject.toml  requirements.txt
animation/: app.py
animation/components/: frame.py  screen.py  title.py
animation/utils/: sound.py
src/animation/: app.py
src/animation/components/: screen.py
src/animation/styles/: screen.tcss
src/animation/utils/: sound.py
